force-app/main/default/objects/Novedad__c/Novedad__c.object-meta.xml
<CustomObject>
    <description>Objeto que representa las novedades que puede presentar un empleado, como incapacidad, vacaciones, licencia, en labor, otra.</description>
    <label>Novedad</label>
    <nameField>
        <displayFormat>NV-{0000}</displayFormat>
        <label>Nombre de Novedad</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Novedades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>