force-app/main/default/objects/Novedad__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la novedad esta activa o no</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>