force-app/main/default/objects/Novedad__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para buscar las cuentas a las que puede ser asociado un empleado para la asignación laboral</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Novedades</relationshipLabel>
    <relationshipName>Novedades</relationshipName>
    <type>Lookup</type>
</CustomField>