force-app/main/default/objects/Novedad__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <description>Comentario opcional para la novedad</description>
    <label>Comentario</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>