force-app/main/default/objects/Novedad__c/fields/D_as_habiles__c.field-meta.xml
<CustomField>
    <fullName>D_as_habiles__c</fullName>
    <description>Días que tomaran las diferentes novedades como incapacidad, vacaciones, licencia</description>
    <label>Días hábiles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>