force-app/main/default/objects/Novedad__c/fields/Empleado__c.field-meta.xml
<CustomField>
    <fullName>Empleado__c</fullName>
    <description>Empleado que tendrá asociadas las novedades</description>
    <label>Empleado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Empleado Salesforce, Empleado E-volution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Novedades</relationshipLabel>
    <relationshipName>Novedades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>