force-app/main/default/objects/Novedad__c/fields/Fecha_de_finalizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finalizacion__c</fullName>
    <description>Fecha de finalización de la novedad</description>
    <label>Fecha de finalización</label>
    <required>true</required>
    <type>Date</type>
</CustomField>