force-app/main/default/objects/Novedad__c/fields/Jornada__c.field-meta.xml
<CustomField>
    <fullName>Jornada__c</fullName>
    <description>Define la jornada de la asignacion laboral en tiempo completo, medio tiempo AM, medio tiempo PM con el fin de realizar un mejor seguimiento</description>
    <label>Jornada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiempo Completo</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>