force-app/main/default/objects/Novedad__c/fields/Nombre_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cliente__c</fullName>
    <description>Nombre del cliente</description>
    <formula>Cliente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de cliente</label>
    <type>Text</type>
</CustomField>