force-app/main/default/objects/Novedad__c/fields/Tipo_de_novedad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_novedad__c</fullName>
    <description>Tipo de novedades que se pueden presentar</description>
    <label>Tipo de novedad</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incapacidad</fullName>
            </value>
            <value>
                <fullName>Vacaciones</fullName>
            </value>
            <value>
                <fullName>Licencia</fullName>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
            <value>
                <fullName>Asignacion Laboral</fullName>
                <label>Asignación Laboral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>