force-app/main/default/objects/Novedad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_novedad__c</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_finalizacion__c</columns>
    <columns>D_as_habiles__c</columns>
    <columns>Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>